키보드 마우스 세트 구입

--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,7 @@ url: "http://astrod.github.io" # the base hostname & protocol for your site
 github_username: astrod
 
 # Build settings
-markdown: kramdown
+markdown: rdiscount
+rdiscount:
+    extensions:
+      - generate_toc
