--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "http://astrod.github.io" # the base hostname & protocol for your site
 github_username: astrod
 
 # Build settings
-markdown: rdiscount
+markdown: kramdown
 rdiscount:
     extensions:
       - generate_toc
